Fixed some problem with a floating sidebar not being wrapped in the content.

--- a/static/css/all.css
+++ b/static/css/all.css
@@ -117,6 +117,5 @@ div#news {
     display: block;
     width: 240px;
     float: right;
-    height: 100%;
     margin-left: 15px;
 }
